--- a/index.html
+++ b/index.html
@@ -8,191 +8,117 @@
 </head>
 <body>
 
-<div class="container mt-5 mb-5">
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">BookList</h5>
-      <p class="card-text">Description</p>
-      <a href="./booklist/index.html" class="btn btn-primary">Live View</a>
-    </div>
-  </div>
-</div>
-
-<div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Calculator</h5>
-        <p class="card-text">Description</p>
-        <a href="./Calculator/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Dice Game</h5>
-        <p class="card-text">Description</p>
-        <a href="./Dice Game/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Gog Finder</h5>
-        <p class="card-text">Description</p>
-        <a href="./Dog Finder/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Expense Tracker</h5>
-        <p class="card-text">Description</p>
-        <a href="./Expense Tracker/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Github Finder</h5>
-        <p class="card-text">Description</p>
-        <a href="./githubfinder/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">HTML Resume</h5>
-        <p class="card-text">Description</p>
-        <a href="./HTML Resume/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Loan Calculator</h5>
-        <p class="card-text">Description</p>
-        <a href="./loancalculator/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Micro Post</h5>
-        <p class="card-text">Description</p>
-        <a href="./microposts/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">News Api Website</h5>
-        <p class="card-text">Description</p>
-        <a href="./NewsApiWebsite/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Number Guesser</h5>
-        <p class="card-text">Description</p>
-        <a href="./numberguesser/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Profile Card</h5>
-        <p class="card-text">Description</p>
-        <a href="./Profile Card/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Profile Scroller</h5>
-        <p class="card-text">Description</p>
-        <a href="./profilescroller/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Spotify Landing Page</h5>
-        <p class="card-text">Description</p>
-        <a href="./Spotify Landing Page/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Task List </h5>
-        <p class="card-text">Description</p>
-        <a href="./tasklist_project/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Colorie Tracker</h5>
-        <p class="card-text">Description</p>
-        <a href="./tracalorie/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container mt-5 mb-5">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Weather App</h5>
-        <p class="card-text">Description</p>
-        <a href="./Weather App/Weather  API/index.html" class="btn btn-primary">Live View</a>
-      </div>
-    </div>
-  </div>
+<script>
+ 
+  var projects = [
+    {
+      title: "BookList",
+      description: "A web application for managing and organizing your book list.",
+      liveViewLink: "./booklist/index.html"
+    },
+    {
+      title: "Calculator",
+      description: "A simple calculator web application for performing basic arithmetic operations.",
+      liveViewLink: "./Calculator/index.html"
+    },
+    {
+      title: "Dice Game",
+      description: "Roll the dice and enjoy a fun game with random outcomes.",
+      liveViewLink: "./Dice Game/index.html"
+    },
+    {
+      title: "Dog Finder",
+      description: "Find adorable dogs and learn more about different breeds.",
+      liveViewLink: "./Dog Finder/index.html"
+    },
+    {
+      title: "Expense Tracker",
+      description: "Track and manage your expenses with this helpful web application.",
+      liveViewLink: "./Expense Tracker/index.html"
+    },
+    {
+      title: "Github Finder",
+      description: "Search and discover GitHub profiles and repositories easily.",
+      liveViewLink: "./githubfinder/index.html"
+    },
+    {
+      title: "HTML Resume",
+      description: "Create a personalized HTML resume to showcase your skills and experience.",
+      liveViewLink: "./HTML Resume/index.html"
+    },
+    {
+      title: "Loan Calculator",
+      description: "Calculate loan payments and understand your financial commitments.",
+      liveViewLink: "./loancalculator/index.html"
+    },
+    {
+      title: "Micro Post",
+      description: "Share and view micro posts in this simple web application.",
+      liveViewLink: "./microposts/index.html"
+    },
+    {
+      title: "News Api Website",
+      description: "Explore the latest news articles from various sources.",
+      liveViewLink: "./NewsApiWebsite/index.html"
+    },
+    {
+      title: "Number Guesser",
+      description: "Guess the correct number and challenge your friends in this game.",
+      liveViewLink: "./numberguesser/index.html"
+    },
+    {
+      title: "Profile Card",
+      description: "Create and customize your personal profile card with this web app.",
+      liveViewLink: "./Profile Card/index.html"
+    },
+    {
+      title: "Profile Scroller",
+      description: "Scroll through profiles and discover new people in this interactive app.",
+      liveViewLink: "./profilescroller/index.html"
+    },
+    {
+      title: "Spotify Landing Page",
+      description: "Explore the landing page design for Spotify in this project.",
+      liveViewLink: "./Spotify Landing Page/index.html"
+    },
+    {
+      title: "Task List",
+      description: "Manage and organize your tasks with this helpful task list web app.",
+      liveViewLink: "./tasklist_project/index.html"
+    },
+    {
+      title: "Colorie Tracker",
+      description: "Track and manage colors in this interactive web application.",
+      liveViewLink: "./tracalorie/index.html"
+    },
+    {
+      title: "Weather App",
+      description: "Check the weather forecast with this handy weather app.",
+      liveViewLink: "./Weather App/Weather  API/index.html"
+    }
+    
+  ];
 
   
+  projects.forEach(function(project) {
+    document.write(`
+    <div class="container mt-5 mb-5">
+        <div class="row">
+          <div class="col-md-6  mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">${project.title}</h5>
+                <p class="card-text">${project.description}</p>
+                <a href="${project.liveViewLink}" class="btn btn-primary">Live View</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    `);
+  });
+</script>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
